view responses updated

--- a/src/pages/Dashboard/ExamForm/QuestionSection/Answer.css
+++ b/src/pages/Dashboard/ExamForm/QuestionSection/Answer.css
@@ -13,7 +13,7 @@
     margin-top: 2px;
 }
 .option-component .chosen-button {
-    background-color: #3ac4c9!important;
+    background-color: #3ac98d!important;
 }
 .active {
     background-color: blue;
